fixed alignment of FCCA class in navbar

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 .FCCA {
   width: 29em;
   justify-content: space-between;
+  align-items: center;
 }
 
 li {
